# ppt-test

./: .gitignore  README.md  pyproject.toml  requirements-heavy.txt  requirements.txt
ppteval/: __init__.py  cli.py  config.py  groundtruth.py  render.py  report.py  review.py  runner.py  schema.py  tokens.py  tui.py
ppteval/adapters/: __init__.py  base.py  docling_adapter.py  marker_adapter.py  markitdown_adapter.py  pptx2md_adapter.py  pptx_custom_adapter.py  pymupdf4llm_adapter.py  tika_adapter.py  unstructured_adapter.py
ppteval/metrics/: __init__.py  coverage.py  operational.py  structure.py
tests/: test_smoke.py  test_tui.py
